# crypto-trading-bot

./: .gitignore  README.md  bot_main.py  calculations.py  context.py  day_trading_bot.py  event_dispatcher.py  extrair_dados.py  get_historical_data.py  listeners.py  main.py  market_data.py  mock_binance.py  order.py  order_promise.py  order_tracker.py  pyproject.toml  test_real_exchange.py  trading_bot.py  utils.py  verify_bot.py  wallet.py
src/bitcoin_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bot_files/: listeners.py  trading_bot.py  trading_bot_example.py
src/events/: order.py  order_tracker.py
src/helpers/: calculations.py  get_historical_data.py  market_data.py  utils.py
test/: mock_exchange.py
