[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-bot"
version = "0.1.0"
description = "Bitcoin trading bot"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

